@@ -11,6 +11,7 @@
 * added Select tool
 * using jQuery hosted by Google instead of local version
 * allow dragging of elements
+* allow creation/editing text elements
 
 2.0 - June 03, 2009
 ------------------
